--- a/app/src/main/res/values/strings_pet_details_fragment.xml
+++ b/app/src/main/res/values/strings_pet_details_fragment.xml
@@ -7,4 +7,6 @@
     <string name="story">Pet story</string>
     <string name="contact">Contact info</string>
 
+    <string name="delete_error">Error occurred while deleting ad</string>
+    <string name="delete_success">Ad deleted successfully</string>
 </resources>
